temporary hack to avoid double scrollbars

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -18,6 +18,10 @@ main {
 }
 // flexbox end
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     overflow-x: hidden;
     line-height: 1.6;
