--- a/src/scss/config/_config.scss
+++ b/src/scss/config/_config.scss
@@ -1,5 +1,6 @@
 $debug: false;
 $bp-xxl: 1280px;
+$grid-max-width: $bp-xxl;
 $column-class: col;
 
 @import "colors";
